# ai-chaos-scout

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
.cursor/commands/: chaos-deck.md  chaos-lens.md  chaos-report.md  chaos-run.md  chaos-scout.md
.cursor/rules/: chaos-scout.mdc
assets/deck-templates/instar-chaos-scout/: README.md  design_spec.md  spec_lock.md
config/: sources.yaml  subject.yaml
docs/: agent-checklist.md  composio.md  deck.md  design-language.md  recommendation-rubric.md
docs/deck-example/: README.md  report.json
docs/example-run/: README.md  digest.md  lens.md  project-summary.md  report.json
knowledge/: lens.md  project-summary.md
reports/: chaos-deck-twenty-2026-07-04.pptx  chaos-report-2026-07-04.eml  chaos-report-2026-07-04.html  chaos-report-2026-07-04.md  presentation-ai-chaos-scout-2026-07-04.pptx
runs/2026-07-04/: digest.md  items.jsonl  report.json
runs/2026-07-05/: items.jsonl
runs/sample/: report.json
scout/: __init__.py  config.py  dedup.py  gemini.py  http.py  models.py  reach.py  render_report.py  run_scout.py  state.py  window.py
scout/adapters/: __init__.py  base.py  greptile.py  msgraph_sharepoint.py  reddit_oauth.py  x_api.py
scout/sources/: __init__.py  _util.py  github_api.py  github_trending.py  hn_algolia.py  ossinsight.py  reach_social.py  rss.py
state/: etags.json  last_run.json  seen.json
tests/: test_adapters.py  test_render.py  test_smoke.py  test_sources.py  test_window.py
tools/: build_deck.py  composio_draft.py
(+1 files in other folders)
